# tacometro-bluepill

./: CMakeLists.txt  README.md  arm-none-eabi.cmake
src/: main.c
